# ai-context-collab-mvp

./: .gitignore  Active_Context.md  Project_Context.md  README.md  render.yaml
app/api/: README.md  pyproject.toml
app/api/app/: main.py
app/api/tests/: test_fixture_repository.py  test_health.py  test_monitoring_api.py  test_schema_contracts.py
projects/context-collaboration-console-api/: .env.example  LICENSE  NOTICE  README.md  alembic.ini  pyproject.toml
projects/context-collaboration-console-api/app/: __init__.py  logging.py  main.py
projects/context-collaboration-console-api/app/api/: dependencies.py  errors.py  health.py  middleware.py  schemas.py
projects/context-collaboration-console-api/app/application/: container.py  document_commands.py  health.py  ports.py  queries.py  review_commands.py  security.py
projects/context-collaboration-console-api/app/domain/: __init__.py  document.py  errors.py  project.py  review_workflow.py  security.py
projects/context-collaboration-console-api/app/infrastructure/: __init__.py  document_validator.py
projects/context-collaboration-console-api/app/scripts/: __init__.py  production_smoke.py  seed.py
projects/context-collaboration-console-api/app/settings/: __init__.py  config.py
projects/context-collaboration-console-api/migrations/: env.py
projects/context-collaboration-console-api/migrations/versions/: 20260722_0001_create_projects.py  20260722_0002_create_document_drafts.py  20260723_0003_create_review_workflow.py  20260723_0004_create_context_versions.py
projects/context-collaboration-console-api/tests/: conftest.py  fakes.py
projects/context-collaboration-console-api/tests/contract/: test_api_contract.py  test_architecture.py  test_intellectual_property_scope.py  test_migration_contract.py  test_production_smoke.py  test_quality_gate.py  test_render_blueprint.py
projects/context-collaboration-console-api/tests/unit/: test_settings.py  (+5 more)
(+664 files in other folders)
