[project]
name = "apc-monitoring-mvp-api"
version = "0.1.0"
description = "FastAPI scaffold for the JADX APC monitoring MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "pydantic==2.11.7",
  "uvicorn==0.35.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
